# User-Isolation-Boilerplate

Backend/: .gitignore  Cargo.toml  cookies.txt
Backend/.sqlx/: query-b7a8722df95d7a31ffd1bb81fde9daed6048b3f3e81e92fbb608002000c9e8b5.json  query-d005c18e6a8ecc72a0974acbd3cfd6a2be9ffe2a15dce305a73919278d6f9e82.json
Backend/migrations/: 20250915113632_create_users.sql  20250925111754_create_password_resets.sql  20250925120000_create_failed_logins.sql
Backend/src/: config.rs  main.rs
Backend/src/auth/: cookies.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  validation.rs
Backend/src/auth/handlers/: login.rs  logout.rs  mod.rs  reset.rs  signup.rs
Backend/src/config/: cors.rs  login.rs  mod.rs  otp.rs  security.rs
Backend/src/database/: db.rs
Backend/src/middleware/: mod.rs  rate_limit.rs  security.rs
Backend/src/models/: claims.rs  email_verification.rs  login.rs  mod.rs  otptemplate.rs  reset.rs  signup.rs  user.rs
Backend/src/routes/: auth_routes.rs
Backend/src/services/: auth.rs
Backend/src/utils/: hash.rs  mod.rs  otp.rs
Backend/templates/: otp_email.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/ui/: password-input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
