[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-web-lab = "0.20"   # for from_fn middleware
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-actix-rustls", "uuid", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
time = { version = "0.3", features = ["serde"] }

