[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-session = { version = "0.7", features = ["redis-rs-session"] }
actix-rt = "2"
actix-web-lab = "0.20"   # for from_fn middleware
actix-cors = "0.7"
env_logger = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
time = { version = "0.3", features = ["serde"] }
regex = "1.10"
validator = { version = "0.16", features = ["derive"] }
once_cell = "1.19"
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "tokio1-native-tls", "smtp-transport"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
askama =  { version = "0.13" } # or latest
